<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/goto_navigation_button"
        android:text="@string/goto_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_fragment_button_margin"
        app:layout_constraintBottom_toTopOf="@+id/goto_background_button" />

    <Button
        android:id="@+id/goto_background_button"
        android:text="@string/goto_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_fragment_button_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goto_phonebook_button"
        android:text="@string/goto_phonebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_fragment_button_margin"
        app:layout_constraintTop_toBottomOf="@+id/goto_background_button" />

</androidx.constraintlayout.widget.ConstraintLayout>